fixes bmi container spacing

--- a/src/BmiCalculator/BmiCalculator.css
+++ b/src/BmiCalculator/BmiCalculator.css
@@ -1,6 +1,6 @@
 #title-bmi{
   font-size: 40px;
   font-style: italic;
-  margin-top: 30px;
+  padding-top: 80px;
   margin-bottom: 10px;
 }
